--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,9 +15,23 @@
   --cp-bg:#F6F7F9;
   --cp-price:#EB5757;
   // 覆盖vant变量
+  // 单元格上下间距
+  --van-cell-vertical-padding: 14px;
+  // 复选框大小
+  --van-checkbox-size: 14px;
+  // 默认按钮文字大小
+  --van-button-normal-font-size: 16px;
   --van-primary-color:var(--cp-primary)
 }
-//局部css变量
-.footer {
-  --footer-color: green;
+
+body {
+  font-size: 14px;
+  color: var(--cp-text1);
+}
+a {
+  color: var(--cp-text2);
+}
+h1,h2,h3,h4,h5,h6,p,ul,ol {
+  margin: 0;
+  padding: 0;
 }
